--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.aosmusic.testprogram" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
@@ -22,7 +24,8 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="Settings" >
+            android:label="Settings"
+            android:parentActivityName=".MainActivity" >
         </activity>
 
     </application>
