--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,16 @@
             android:label="Settings"
             android:parentActivityName=".MainActivity" >
         </activity>
+        <activity
+            android:name=".MediaActivity"
+            android:label="Music"
+            android:parentActivityName=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:mimeType="audio/*" />
+                <data android:mimeType="application/ogg" />
+            </intent-filter>
+        </activity>
 
     </application>
 
